--- a/frontend/style.scss
+++ b/frontend/style.scss
@@ -11,6 +11,10 @@
   display: none;
 }
 
+a.profilepage{
+  display: none;
+}
+
 body {
   min-height: 100vh;
   display: flex;
@@ -192,12 +196,14 @@ footer {
   flex-direction: column;
   align-items: center;
   margin-bottom: 60px;
+
   .bookBox {
     width: 80%;
 
     h2 {
       margin-bottom: 30px;
     }
+
     .booksContainer {
       display: grid;
       grid-template-columns: 20% 20% 20% 20%;
@@ -213,29 +219,26 @@ footer {
         flex-direction: column;
         align-items: center;
 
+        .labelForBookMark {
+          font-size: x-large;
+          align-items: center;
+          align-self: end;
+          margin-bottom: 20px;
+
+        }
+
+      }
+
+      .bookInfoDiv {
+        .info {
+          font-size: 15px;
+        }
         .ratingDiv {
           display: flex;
           width: 210px;
           justify-content: space-between;
           margin-bottom: 10px;
-
-
-          .starsAndRatingDiv {
-            display: flex;
-            align-items: center;
-          }
-
-          .labelForBookMark {
-            font-size: 25px;
-          }
-
-          
-          }
         }
-        .bookInfoDiv {
-            .info {
-                font-size: 15px;
-            }
       }
     }
   }
@@ -284,6 +287,7 @@ footer {
   .logoutWelcomeText {
     h1 {
       color: $orange;
+      margin-bottom: 10px;
     }
     p {
       color: $darkBlue;
@@ -330,8 +334,13 @@ footer {
           color: $orange;
         }
 
-        .removeBtn{
+        .fa-trash-can{
             align-self: end;
+            font-size: large;
+            &:hover {
+              color: $orange;
+            }
+    
         }
       }
     }
@@ -401,7 +410,7 @@ footer {
   }
 }
 
-header.dark {
+header.navy {
   background: $darkBlue;
   color: white;
   a {
@@ -409,12 +418,12 @@ header.dark {
   }
 }
 
-body.dark {
+body.navy {
   background: gainsboro;
   color: $darkBlue;
 }
 
-footer.dark {
+footer.navy {
   background: $darkBlue;
   color: white;
   a {
@@ -427,3 +436,78 @@ footer.dark {
     }
   }
 }
+
+header.pink {
+  background: #6C4A4A;
+  color: white;
+  a {
+    color: $darkPink;
+    &:hover {
+      color: $darkPink;
+      text-decoration: underline;
+      font-weight: bolder;
+    }
+  }
+}
+
+body.pink {
+  background: $bgPink;
+  color: $darkPink;
+  .logoutWelcomeText{
+    h1{
+      color: #6C4A4A;
+    }
+    p{
+      color: $darkPink;
+    }
+  }
+}
+
+footer.pink {
+  background: #6C4A4A;
+  color: $bgPink;
+  a {
+    text-decoration: none;
+    color: $darkPink;
+    &:hover {
+      color: $darkPink;
+      text-decoration: underline;
+      font-weight: bolder;
+    }
+  }
+}
+
+.loginForm.pink{
+  .form-box{
+    background: $pink;
+    border: 2px solid #6C4A4A;
+    h2 {
+      color: #6C4A4A;
+    }
+  }
+
+  .input-field {
+    background: white;
+  }
+
+  a {
+    text-decoration: none;
+    color: $darkPink;
+  }
+
+  p{
+    color: #6C4A4A;
+  }
+
+  button {
+    background: $bgPink;
+    color: #6C4A4A;
+
+    &:hover {
+      background: $darkPink;
+      color: $bgPink;
+    }
+  }
+}
+
+
