--- a/frontend/styles/partials/_variables.scss
+++ b/frontend/styles/partials/_variables.scss
@@ -2,3 +2,9 @@ $darkBlue: #023047;
 $orange:#FB8500;
 $bgBlue: #F4FAFD;
 $babyBlue: #219EBC;
+$darkPink: #D14D72;
+$pink: #FFABAB;
+$lightPink: #FCC8D1 ;
+$bgPink: #FEF2F4;
+
+
